# MicroServC-11Krona

./: .gitignore  AskingThread.cpp  CMakeLists.txt  Client.h  ClientThreads.cpp  ListeningThread.cpp  Particepant.cpp  RequestHandlers.cpp  RequestHandlers.h  RequestObject.cpp  RequestObjectDispatcher.cpp  RequestObjects.cpp  RequestParser.cpp  RequestParser.h  SendListenSockets.cpp  Server.h  SocketClient.cpp  SocketDictionary.h  SocketServer.cpp
